fix: Tip message and the edit button overlap

--- a/src/components/Forms/Workload/ContainerSettings/ContainerList/index.scss
+++ b/src/components/Forms/Workload/ContainerSettings/ContainerList/index.scss
@@ -8,7 +8,7 @@
 }
 
 .limits {
-  right: 20px;
+  right: 140px;
   @include vertical-center;
   @include TypographyTitleH6();
 
